After editing pie-charts in wizard6